metadata/force-app/main/default/objects/ccrz__E_CategoryI18N__c/fields/ccrz__LongDesc__c.field-meta.xml
<CustomField>
    <fullName>ccrz__LongDesc__c</fullName>
    <description>The localized category long description.  The preference should be to use the RT version of this field and no longer set or use this field.</description>
    <label>LongDesc</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>