metadata/force-app/main/default/objects/ccrz__E_CategoryI18N__c/fields/ccrz__ShortDesc__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShortDesc__c</fullName>
    <description>Short localized category description.  The preference should be to use the RT version of this field and no longer set or use this field.</description>
    <label>ShortDesc</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>