metadata/force-app/main/default/objects/ccrz__E_CategoryI18N__c/fields/ccrz__ShortDescRT__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShortDescRT__c</fullName>
    <description>Short localized category description as rich text.</description>
    <label>ShortDescRT</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>